# containerized_nlp_text_translation

./: Dockerfile  main.py  pyproject.toml
api/v1/: translate.py
core/: config.py
schemes/: translate.py
