[tool.poetry]
name = "Translators"
version = "0.1.0"
description = ""
authors = ["madjanorjedidiah <jmadjanor6@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
flax = "^0.5.3"
torch = "^1.12.1"
tensorflow = "2.9.0"
transformers = "^4.21.1"
flake8 = "^5.0.4"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
